Bug 145928 - Crash mergedlo!SdrUndoObj::ImpShowPageOfThisObject+33 (SwpHints::Check(bool) ndhints.cxx:359)
Summary: Crash mergedlo!SdrUndoObj::ImpShowPageOfThisObject+33 (SwpHints::Check(bool) ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2 tar...
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Crash-Assert Undo-Redo
  Show dependency treegraph
 
Reported: 2021-11-28 11:45 UTC by Telesto
Modified: 2021-12-13 10:30 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
BT without symbols (13.12 KB, text/plain)
2021-11-28 11:46 UTC, Telesto
Details
bt with debug symbols (8.23 KB, text/plain)
2021-11-29 10:30 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-11-28 11:45:00 UTC
Description:
Crash mergedlo!SdrUndoObj::ImpShowPageOfThisObject+33

Steps to Reproduce:
2. Open attachment 169679 [details] (bug 140345)
3. Scroll to bottom
4. Select the yellow marked area
5. Click Highlight No Fill 
6. Press Save
7. Edit -> Track Changes -> Reject all
8. press and hold CTRL+Z -> Crash

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ddc57169ac8d1de00403dbb09fef5221beaa0f3d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-11-28 11:46:38 UTC
Created attachment 176544 [details]
BT without symbols
Comment 2 Roman Kuznetsov 2021-11-28 12:48:56 UTC
no crash in (build from 25 November 2021)

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 515682539623c9d61921c4f89302ffa0a4cb8d24
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

but the crash in

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d272bf4f8f3a083b8c37f7b10f89cd2bf76b7d21
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

=> regression
Comment 3 Ezinne 2021-11-29 08:29:18 UTC
I can reproduce the issue in an earlier 7.3 build:

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: eec32be26d5d5805c1cb8cb53ce9702c04829819
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Julien Nabet 2021-11-29 10:30:30 UTC
Created attachment 176564 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I got an assertion.
Comment 5 psidiumcode 2021-11-29 20:48:12 UTC
Bisected with mac64-7.2 repo
 8827bdad94fb5f23cdaf31692e880911e40bd27b is the first bad commit
commit 8827bdad94fb5f23cdaf31692e880911e40bd27b
Author: libreoffice <libreoffice@libreoffices-Mac-mini.local>
Date:   Sat Apr 10 03:10:17 2021 +0200

    source 9bc6160e0acbc78be998129ea55ed7e4529959fa
    
    source 9bc6160e0acbc78be998129ea55ed7e4529959fa

 .../Contents/Frameworks/libsvxcorelo.dylib         | Bin 9088316 -> 9088316 bytes
 LibreOffice.app/Contents/Frameworks/libswlo.dylib  | Bin 18413728 -> 18424104 bytes
 LibreOffice.app/Contents/Frameworks/libxolo.dylib  | Bin 4853172 -> 4858348 bytes
 LibreOffice.app/Contents/Resources/setuprc         |   2 +-
 LibreOffice.app/Contents/Resources/versionrc       |   2 +-
 5 files changed, 2 insertions(+), 2 deletions(-)
Comment 6 psidiumcode 2021-11-29 20:48:31 UTC Comment hidden (bibisection)
Comment 7 Telesto 2021-11-29 21:02:17 UTC
Adding CC: to Michael Stahl

author	Michael Stahl <michael.stahl@allotropia.de>	2021-03-08 20:03:35 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2021-03-15 10:15:57 +0100
commit 9bc6160e0acbc78be998129ea55ed7e4529959fa (patch)
tree d07f099dbf264a24c4d291997637fc49d5ebbf96
parent bfa320ef2ac7ab9a84f86eee6dfa7f3ee67fa630 (diff)
tdf#133487 sw ODF export: reorder flys' ZOrder/z-index...
... so background shapes have lower z-index than foreground shapes,
as is recommended by ODF 1.3.

Also let SdrObjList::sort() record Undo actions, because earlier Undo
actions could expect the previous sort order.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9bc6160e0acbc78be998129ea55ed7e4529959fa
Comment 8 Commit Notification 2021-12-01 12:52:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/25a368c30acb54e0819d2b2b890a3fd1530d8a76

tdf#145928 svx: fix undo of sorting shapes

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2021-12-03 15:58:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/5a57ef3293bb2581a83487d1fd5534ed3b414217

tdf#145928 svx: fix undo of sorting shapes

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2021-12-03 21:41:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/0742445bf5cfb691f2ec0b5b1f0f752911b058bb

tdf#145928 svx: fix undo of sorting shapes

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Christian Lohmaier 2021-12-06 13:30:12 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard
Comment 12 Justin L 2021-12-09 07:30:37 UTC
Please mark as fixed if this issue is solved. [I can't confirm because I got an assert.]
Comment 13 Michael Stahl 2021-12-13 10:30:37 UTC
fixed

the assert from comment #4 is unrelated